--- a/app/views/devise/passwords/edit.slim
+++ b/app/views/devise/passwords/edit.slim
@@ -1,18 +1,22 @@
 #change-pass.center-box
-  h2 =t'change_password.change_password'
+  h2 =t'change_password.title'
 
 
   = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
     =devise_error_messages!
     = f.hidden_field :reset_password_token
     div
-      = f.label :password, "New password"
-      = f.password_field :password
+      table.change_password
+        tr
+          td
+            = f.label :password, t('account_settings.new_password')
+          td
+            = f.password_field :password
+        tr
+          td
+            = f.label :password_confirmation, t('account_settings.new_password_confirm')
+          td
+            = f.password_field :password_confirmation
 
     div
-      = f.label :password_confirmation, "Confirm new password"
-      = f.password_field :password_confirmation
-
-    div
-      = f.submit "Change my password"
-      = render "devise/shared/links"
+      = f.submit t('change_password.change_password')
