--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -22,11 +22,9 @@ div.wysiwyg ul.toolbar {
     padding-left: 0;
     margin: 54px 0 10px 0;
     font-size: 100%; }
-  #sidebar a,
-  #sidebar a:visited {
+  #sidebar a, #sidebar a:visited {
     color: #3B5998;
-    text-decoration: none;    
-  }  
+    text-decoration: none; }
   #sidebar .spacer {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
@@ -149,6 +147,7 @@ div.wysiwyg ul.toolbar {
 
 #builder-container {
   min-height: 450px;
+  padding-bottom: 10px;
   background: #edeff4;
   border-top: 1px solid #b3b3b3; }
 
@@ -164,7 +163,8 @@ div.wysiwyg ul.toolbar {
   width: 390px;
   height: 100%;
   border-right: 1px solid #b3b3b3;
-  padding: 0 0 10px 10px; }
+  padding: 0 0 10px 10px;
+  margin-bottom: -10px; }
   #builder .left > .title-subtext {
     font-weight: bold;
     color: #6D3F3A;
@@ -446,6 +446,14 @@ div.wysiwyg ul.toolbar {
   #builder .edit-area.edit-advanced-settings .new-picture,
   #builder .edit-area.customize .new-picture {
     width: 100%; }
+  #builder .edit-area.edit-settings .qrcode img,
+  #builder .edit-area.edit-advanced-settings .qrcode img,
+  #builder .edit-area.customize .qrcode img {
+    width: 48px; }
+  #builder .edit-area.edit-settings .qrcode td,
+  #builder .edit-area.edit-advanced-settings .qrcode td,
+  #builder .edit-area.customize .qrcode td {
+    padding-right: 10px; }
 
 #builder .edit-area.customize .subpanels > * {
   display: none; }
@@ -466,7 +474,7 @@ div.wysiwyg ul.toolbar {
 
 .wphoto-wrap {
   width: 100%;
-  border: 1px solid #BDC7D8;
+  border: 1px solid #bdc7d8;
   margin: 10px 0;
   padding: 5px; }
   .wphoto-wrap label {
@@ -497,9 +505,9 @@ div.wysiwyg ul.toolbar {
   -moz-transition: background-position 2s;
   -webkit-transition: background-position 2s;
   -o-transition: background-position 2s;
-  border: 1px solid #DFDFDF;
-  border-top: 1px solid #DDDDDD;
-  border-bottom: 1px solid #E2E2E2;
+  border: 1px solid #dfdfdf;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #e2e2e2;
   font-size: 1em;
   overflow: hidden;
   white-space: nowrap;
@@ -513,7 +521,7 @@ div.wysiwyg ul.toolbar {
 
 #dialog-confirm .wphoto-wrap {
   padding: 0px 4px 0px 4px;
-  border: 3px solid #BDC7D8; }
+  border: 3px solid #bdc7d8; }
 
 #dialog-confirm.subcat p.error {
   margin: 0 0 0 48px;
@@ -729,11 +737,11 @@ div.wysiwyg ul.toolbar {
   max-height: 235px;
   margin: 0 2px 8px 0px;
   padding: 10px 0 10px 0;
-  border: 3px solid #ccc;
+  border: 3px solid #cccccc;
   overflow: auto; }
   #dialog-confirm.edit-icon .icons .wicon-opt {
     margin: 2px;
-    border: 2px solid #fff;
+    border: 2px solid white;
     cursor: pointer; }
   #dialog-confirm.edit-icon .icons .wicon-opt:hover {
     border: 2px solid #d8dfea; }
