--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -1,14 +1,19 @@
 #top-bar
   .company-info
     / The template for this is in _templates.slim
-  .tab-bar
-    table
-      tr
-        td.go-home
-          a href="#home" =t'mobile.tab_bar.home'
-        td.wtab
-        td.wtab
-        td.wtab
+  - if !is_tab_bar_visible?  
+      .tab-bar
+  - else
+      .tab-bar style="display:none;"
+      
+        table
+          tr
+            td.go-home
+              a href="#home" =t'mobile.tab_bar.home'
+            td.wtab
+            td.wtab
+            td.wtab
+  
   - unless @is_preview_mode || @company.premium?
     .ad-bar
       = render 'mobile/adsense' if Rails.env == 'production'
@@ -25,11 +30,20 @@
     - if @company.premium? == false && @is_preview_mode == true
       .ad-bar.bottom
         = render 'mobile/yomobi-upgrade-ad'
-    .mobile-footer
-      = render 'mobile/social-share'
-      - unless @company.premium?
-        erb:
-          <div class="clearfix"></div>
-          <div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
-          <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
+    - if !is_footer_bar_visible?        
+      .mobile-footer
+        = render 'mobile/social-share'
+        - unless @company.premium?
+          erb:
+            <div class="clearfix"></div>
+            <div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
+            <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
+    - else
+      .mobile-footer style="display:none;"
+        = render 'mobile/social-share'
+        - unless @company.premium?
+          erb:
+            <div class="clearfix"></div>
+            <div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
+            <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
 
