New widget name -Text Area is added to left menu of the mobile website builder.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -599,6 +599,10 @@ script.facebook-edit-area.twitter-edit-area.picasa-edit-area.flickr-edit-area(ty
 script.custom-page-edit-area.about-us-edit-area(type="text/template")
   #jeditor-wrapper
     textarea#jeditor rows=8 cols=8
+    
+script.text-area-edit-area(type="text/template")
+  #jeditor-wrapper
+    textarea#jeditor rows=8 cols=8
 
 script.call-us-edit-area(type="text/template")
   label =t'builder.widget_editor.phone_number_label_required'
