--- a/public/stylesheets/dbx.css
+++ b/public/stylesheets/dbx.css
@@ -25,6 +25,19 @@
     display:block;
 }
 
+.textarea-div {
+	width: 100% !important;
+}
+
+.textare-container {
+	position: relative;
+	display: block;
+	width: 95%;
+	border: dashed 2px #a4bec6;
+	-webkit-box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
 /****************************************************************
   DO NOT ADD padding, margins or borders to dbx-box, 
   to avoid layout discrepancies between it and the clone.  
