--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -15,7 +15,8 @@
 	  <% } else { %>
 	  .text-area-widget
 		  .icon{ style="width: 100%;" }
-		  	.dbx-handle {{ content }}
+		  	.dbx-handle{style="width: 100%;height: 100%"} 
+		  		.tex-area-content{id='{{ id }}'} {{ content }}
 	  <% } %>
 	  
   script.mapp-header(type="text/template")
