Fixed bugs in typing in content and border of text area in mobile view

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -13,8 +13,7 @@ p {
   -webkit-margin-after: 0em; }
 
 em {
-  font-size:100%;  
-}
+  font-size: 100%; }
 
 .leaf-content h1, .leaf-content h2, .leaf-content h3, .custom_page h1, .custom_page h2, .custom_page h3 {
   margin: 4px 0px 4px 0px; }
@@ -93,7 +92,7 @@ em {
   /* Webkit (Chrome 11+) */
   background-image: -webkit-linear-gradient(top, white 0%, #b8b8b8 50%);
   /* Proposed W3C Markup */
-  background-image: linear-gradient(top, white 0%, #b8b8b8 50%);
+  background-image: linear-gradient(top, #ffffff 0%, #b8b8b8 50%);
   color: #333333; }
   .back-bar .title {
     float: left;
@@ -124,7 +123,7 @@ em {
   /* Webkit (Chrome 11+) */
   background-image: -webkit-linear-gradient(bottom, #2a426a 0%, white 500%);
   /* Proposed W3C Markup */
-  background-image: linear-gradient(bottom, #2a426a 0%, white 500%); }
+  background-image: linear-gradient(bottom, #2a426a 0%, #ffffff 500%); }
   .company-info table {
     height: 60px; }
   .company-info td {
@@ -497,3 +496,15 @@ img.yo-left {
 
 img.yo-right {
   padding: 3px 0px 0px 10px; }
+  
+.textarea-div {
+	width: 100% !important;
+}
+
+.textare-container {
+	position: relative;
+	display: block;
+	width: 95%;
+	-webkit-box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.1);
+}
