Chnages to category to include text area

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -773,6 +773,7 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
       .button.add-item =t('builder.widget_editor.add_item', :item => "{{ itemLabel }}")
       | <% if (wtype === 'page_tree') { %>
       .button.add-rss-feed title=t'builder.widget_editor.rss_icon' = t'builder.widget_editor.add_rss' 
+      .button.add-text-area title=t'builder.widget_editor.text_area_icon' = t'builder.widget_editor.add_text_area'
       | <% } %>
       .row-separator
       | <% if (isThereStuff == true | true) { %>
