Updated code to make the New Text Area dialog appear
Modified files so when you click on the New Text Area button in a
Category editor, the New Text Area dialog appears. There's still a lot
of stuff to be fixed, like removing the Photo section from the New Text
Area dialog, since there is no photo associated with a Text Area,
adding an Icon, pulling up the correct editor when you edit a text area.

--- a/app/views/builder/_cat-dialog-templates.slim
+++ b/app/views/builder/_cat-dialog-templates.slim
@@ -146,3 +146,10 @@ script.rss-feed-item-dialog-content(type="text/template")
   br
   input.item-input type="text" value="{{ _maybe.url }}" name="url"
   br
+
+script.text-area-item-dialog-content(type="text/template")
+  p =t'dialog.add_item.text-area-info'
+  label =t'dialog.add_item.text_area_title_required'
+  br
+  input.item-input type="text" value="{{ _maybe.name }}" name="name"
+  br
