Text-area button added to Locations, Menu, Products/Services, Property Listing widgets

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -780,6 +780,9 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
       .button-separator.back
       .button.add-cat =t('builder.widget_editor.add_item', :item => "{{ catLabel }}")
       .button.add-item =t('builder.widget_editor.add_item', :item => "{{ itemLabel }}")
+      | <% if (wtype === 'category') { %>
+      .button.add-text-area title=t'builder.widget_editor.text_area_icon' = t'builder.widget_editor.add_text_area'
+      | <% } %>
       | <% if (wtype === 'page_tree') { %>
       .button.add-rss-feed title=t'builder.widget_editor.rss_icon' = t'builder.widget_editor.add_rss' 
       .button.add-text-area title=t'builder.widget_editor.text_area_icon' = t'builder.widget_editor.add_text_area'
