adding jquery sortable

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -505,6 +505,7 @@ img.yo-right {
 	position: relative;
 	display: block;
 	width: 95%;
+	height:auto;
 	-webkit-box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
 	box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
